// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Claude prompt builder > should match snapshot 1`] = `
"## HTML Output Contract

You are operating in a project that uses llm-html-kit for structured HTML generation.

### Rules (non-negotiable)
1. ALWAYS include \`<link rel="stylesheet" href="./styles.css">\` in \`<head>\`.
2. NEVER write \`style=""\` attributes on any element.
3. NEVER add \`<style>\` blocks.
4. NEVER use Tailwind utility classes (text-sm, px-4, bg-blue-500, etc.).
5. Use ONLY the CSS classes listed in the vocabulary below.
6. Use semantic HTML5: <main>, <section>, <article>, <header>, <footer>, <nav>, <aside>.

### CSS Vocabulary
Available CSS classes (use these, never write inline styles):
Typography: prose, heading-xl
Components: card, data-table
Callouts: callout-warning

### Correct Structure
\`\`\`html
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>Document</title>
  <link rel="stylesheet" href="./styles.css">
</head>
<body>
  <main class="container stack">
    <h1 class="heading-xl">Title</h1>
    <div class="card">
      <div class="card-header heading-md">Section</div>
      <div class="card-body prose">
        <p>Paragraph text here.</p>
      </div>
    </div>
  </main>
</body>
</html>
\`\`\`

### Validation
After generating HTML, the user will run: \`llm-html audit <file> --validate\`
If it reports errors, fix ALL of them before considering the task complete."
`;

exports[`Gemini prompt builder > should match snapshot 1`] = `
"## HTML Output Contract

When generating HTML documents, follow these strict rules:

### Rules (non-negotiable)
1. ALWAYS include \`<link rel="stylesheet" href="./styles.css">\` in \`<head>\`.
2. NEVER write \`style=""\` attributes on any element.
3. NEVER add \`<style>\` blocks.
4. NEVER use Tailwind utility classes (text-sm, px-4, bg-blue-500, etc.).
5. Use ONLY the CSS classes listed in the vocabulary below.
6. Use semantic HTML5: <main>, <section>, <article>, <header>, <footer>, <nav>, <aside>.

### CSS Vocabulary
Available CSS classes (use these, never write inline styles):
Typography: prose, heading-xl
Components: card, data-table
Callouts: callout-warning

### Correct Structure
\`\`\`html
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>Document</title>
  <link rel="stylesheet" href="./styles.css">
</head>
<body>
  <main class="container stack">
    <h1 class="heading-xl">Title</h1>
    <div class="card">
      <div class="card-header heading-md">Section</div>
      <div class="card-body prose">
        <p>Paragraph text here.</p>
      </div>
    </div>
  </main>
</body>
</html>
\`\`\`

Violation of any rule above (inline styles, missing link tag, invented classes) will cause validation failure."
`;
